<resources>
    <string name="app_name">Fiscal Code</string>
    <string name="province">Select a province</string>
    <string name="district">"Select a town "</string>
    <string name="region">Select a region</string>
    <string name="surname">Surname</string>
    <string name="name">First name</string>
    <string name="gender" translatable="false">M/F</string>
    <string name="alias">Nickname</string>
    <string name="title">Title</string>
    <string name="manual">Manual generation</string>
    <string name="barcode" translatable="false">BarCode Scanner</string>
    <string name="newFC">Add new</string>
    <string name="generate">Generate</string>
    <string name="error">Something went wrong…</string>
    <string name="complete">Complete all the fields!</string>
    <string name="cancelled">Cancelled</string>
    <string name="autosaved">Autosaved</string>
    <string name="birth">Birthplace:</string>
    <string name="savePop">Save</string>
    <string name="cancelPop">Cancel</string>
    <string name="date">Birthdate</string>
</resources>